--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,15 @@
-##ignore this file##
-/target/
-/.idea/
-/.settings/
-/.vscode/
-/bin/
-
-.classpath
-.project
-.settings
-.idea
- ##filter databfile、sln file##
-*.mdb
-*.ldb
-*.sln
-##class file##
-*.com
 *.class
-*.dll
-*.exe
-*.o
-*.so
-# compression file
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-*.via
-*.tmp
-*.err
 *.log
-*.iml
-# OS generated files #
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-Icon?
-ehthumbs.db
-Thumbs.db
-.factorypath
-/.mvn/
-/mvnw.cmd
-/mvnw
+*.lock
+
+# Package Files #
+*.jar
+*.war
+*.ear
+target/
+
+# idea
+.idea/
+*.iml/
+
+*velocity.log
