--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -17,7 +17,7 @@
   <dependencies>
     <dependency>
       <groupId>com.yupi.yurpc</groupId>
-      <artifactId>yu-rpc-easy</artifactId>
+      <artifactId>yu-rpc-core</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
