--- a/yu-rpc-core/pom.xml
+++ b/yu-rpc-core/pom.xml
@@ -46,7 +46,16 @@
       <version>RELEASE</version>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>1.28</version>
+    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>commons-beanutils</groupId>-->
+<!--      <artifactId>commons-beanutils</artifactId>-->
+<!--      <version>1.9.3</version>-->
+<!--    </dependency>-->
   </dependencies>
 
 
