--- a/yu-rpc-core/pom.xml
+++ b/yu-rpc-core/pom.xml
@@ -51,11 +51,22 @@
       <artifactId>snakeyaml</artifactId>
       <version>1.28</version>
     </dependency>
-<!--    <dependency>-->
-<!--      <groupId>commons-beanutils</groupId>-->
-<!--      <artifactId>commons-beanutils</artifactId>-->
-<!--      <version>1.9.3</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>com.caucho</groupId>
+      <artifactId>hessian</artifactId>
+      <version>4.0.66</version>
+    </dependency>
+    <dependency>
+      <groupId>com.esotericsoftware</groupId>
+      <artifactId>kryo</artifactId>
+      <version>5.6.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.13.3</version>
+    </dependency>
+
   </dependencies>
 
 
