--- a/yu-rpc-core/pom.xml
+++ b/yu-rpc-core/pom.xml
@@ -66,6 +66,12 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.13.3</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/io.etcd/jetcd-core -->
+    <dependency>
+      <groupId>io.etcd</groupId>
+      <artifactId>jetcd-core</artifactId>
+      <version>0.7.7</version>
+    </dependency>
 
   </dependencies>
 
