--- a/spring-boot-provider/src/main/resources/application.yml
+++ b/spring-boot-provider/src/main/resources/application.yml
@@ -1,7 +1,10 @@
 rpc:
   name: yurpc
   version: 1.0.0
-  serverPort: 8082
+  serverPort: 8084
   mock: false
   registryConfig:
     registry: etcd
+spring:
+  profiles:
+    active: dev
